// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShopifyIntegration/> render() should render a loader because the integration is loading 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="inner"
      style="min-height: 500px;"
    >
      <i
        class="icon-custom icon-circle-o-notch md-spin"
        style="font-size: 40px;"
      />
    </div>
  </div>
</div>
`;

exports[`<ShopifyIntegration/> render() should render an integration with a delete button that deletes the integration 1`] = `
<div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert loading mb-4"
        >
          <div
            class="iconContainer"
          >
            <span
              class="loadingIcon"
            >
              <svg
                class="ui-loadingspinner-spinner-fc79 ui-loadingspinner-dark-fc79 ui-loadingspinner-small-fc79"
                data-name="loading-spinner"
                preserveAspectRatio="xMidYMid meet"
                role="status"
                viewBox="0 0 20 20"
              >
                <circle
                  class="ui-loadingspinner-dot-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <circle
                  class="ui-loadingspinner-circle-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </svg>
            </span>
          </div>
          <div
            class="content"
          >
            <span
              class="label"
            >
              Import in progress. We typically sync 3,000 customers an hour. We will send you an email once it is done. Feel free to leave this page.
            </span>
          </div>
        </div>
        <form>
          <label
            class="ui-label-label-a11c ui-label-isdisabled-a11c mb-2"
            for="disabled-store-field"
          >
            Store name
          </label>
          <span
            class="mb-4 wrapper group horizontal"
          >
            <div
              class="wrapper left isDisabled isNested"
            >
              <input
                class="input"
                data-resizable="false"
                disabled=""
                id="disabled-store-field"
                name="store-name"
                type="text"
                value=""
              />
            </div>
            <span
              class="groupAddon right isDisabled"
            >
              .myshopify.com
            </span>
          </span>
          <div
            class="mb-4"
          >
            <div>
              <label
                aria-checked="true"
                class="ui-label-label-a11c ui-togglefield-label-9b7c"
                role="switch"
              >
                <input
                  checked=""
                  class="ui-togglefield-input-9b7c"
                  disabled=""
                  name="sync_customer_notes"
                  type="checkbox"
                />
                <div
                  class="ui-togglefield-slider-9b7c"
                />
                <div>
                  Synchronize customer notes between Gorgias and Shopify
                  <div
                    class="ui-fieldcaption-caption-1f94"
                    data-name="field-caption"
                  >
                    When editing notes in both places at the same time, the first one saved will be synchronized.
                    <br />
                    Notes will not be synchronized for customers who are associated with more than one Shopify store.
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="mb-4"
          >
            <div>
              <label
                aria-checked="false"
                class="ui-label-label-a11c ui-togglefield-label-9b7c"
                role="switch"
              >
                <input
                  class="ui-togglefield-input-9b7c"
                  disabled=""
                  name="default_address_phone_matching_enabled"
                  type="checkbox"
                />
                <div
                  class="ui-togglefield-slider-9b7c"
                />
                <div>
                  Match customer by Shopify default address phone number
                  <div
                    class="ui-fieldcaption-caption-1f94"
                    data-name="field-caption"
                  >
                    Gorgias will search for Shopify customer’s default address for customer matching.
                    <br />
                    <b>
                      Do not enable if you use the same phone number across multiple customers
                    </b>
                    , as this will lead to incorrect customer merges.
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            data-name="box"
            style="justify-content: space-between; display: flex;"
          >
            <div
              data-name="box"
              style="display: flex; gap: 12px;"
            >
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:r4:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Update Connection
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
            <button
              aria-disabled="false"
              class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-destructive-cef1"
              id="integration-deletion-confirm-button"
              type="button"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
              >
                delete
              </i>
              <span
                class="ui-button-content-cef1"
              >
                Delete App
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ShopifyIntegration/> render() should render an integration with a delete button that deletes the integration 2`] = `
[
  [
    Immutable.Map {},
  ],
]
`;

exports[`<ShopifyIntegration/> render() when enabling DSA phone matching, should send all the integration meta after asking for confirmation 1`] = `
[
  [
    Immutable.Map {
      "meta": Immutable.Map {
        "sync_customer_notes": false,
        "default_address_phone_matching_enabled": true,
      },
    },
  ],
]
`;

exports[`<ShopifyIntegration/> render() when not enabling DSA phone matching, should send all the integration meta without asking for confirmation 1`] = `
[
  [
    Immutable.Map {
      "meta": Immutable.Map {
        "sync_customer_notes": false,
        "default_address_phone_matching_enabled": false,
      },
    },
  ],
]
`;
